--- a/sample.html
+++ b/sample.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>クイズ</title>
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background: linear-gradient(to bottom, #aee6ff, #0056b3);
+  font-family: 'Helvetica Neue', sans-serif;
+  overflow: hidden;
+}
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  padding: 3vh 5vw;
+  box-sizing: border-box;
+}
+
+.question-box {
+  background: white;
+  border-radius: 10px;
+  padding: 3vh 2vw;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  margin-top: 4vh;
+}
+
+.timer-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 3vh 0;
+  gap: 2vw;
+}
+
+.timer-label {
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.timer-bar {
+  position: relative;
+  width: 70%;
+  height: 8px;
+  background: rgba(255,255,255,0.3);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.timer-progress {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #fff;
+  border-radius: 10px;
+  animation: countdown 10s linear forwards;
+}
+
+@keyframes countdown {
+  from { width: 100%; }
+  to { width: 0%; }
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5vw;
+  margin-bottom: 12vh; /* ボタンを上に */
+}
+
+button {
+  flex: 1;
+  background: white;
+  border: 4px solid #004a99;
+  outline: 2px solid white;
+  border-radius: 12px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 8vh 0; /* 高さ2倍 */
+  transition: all 0.15s ease;
+  box-shadow: 0 8px #004a99;
+  color: #004a99;
+}
+
+button:active {
+  background: #004a99;
+  color: white;
+  transform: translateY(6px);
+  box-shadow: 0 2px #002f66;
+}
+</style>
+</head>
+<body>
+  <div class="container">
+    <div class="question-box">
+      次のうち、哺乳類はどれ？
+    </div>
+
+    <div class="timer-container">
+      <div class="timer-label">TIME</div>
+      <div class="timer-bar"><div class="timer-progress"></div></div>
+    </div>
+
+    <div class="buttons">
+      <button>ペンギン</button>
+      <button>イルカ</button>
+    </div>
+  </div>
+</body>
+</html>
