--- a/sample.html
+++ b/sample.html
@@ -2,141 +2,261 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>クイズ</title>
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background: linear-gradient(to bottom, #aee6ff, #0056b3);
-  font-family: 'Helvetica Neue', sans-serif;
-  overflow: hidden; /* スクロール禁止 */
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -ms-touch-action: manipulation;
-  overscroll-behavior: none;
+html,body{
+  margin:0;padding:0;height:100%;
+  background:linear-gradient(to bottom,#aee6ff,#0056b3);
+  font-family:'Helvetica Neue',sans-serif;overflow:hidden;
 }
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-  padding: 3vh 5vw;
-  box-sizing: border-box;
+.container{
+  display:flex;flex-direction:column;justify-content:space-between;
+  height:100vh;padding:3vh 5vw;box-sizing:border-box;
 }
-
-.question-box {
-  background: white;
-  border-radius: 10px;
-  padding: 3vh 2vw;
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: bold;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-  margin-top: 4vh;
+.question-box{
+  background:white;border-radius:10px;padding:1vh 2vw;text-align:center;
+  font-size:1.2rem;font-weight:bold;box-shadow:0 3px 10px rgba(0,0,0,0.1);
+  margin-top:4vh;
 }
-
-.timer-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 3vh 0;
-  gap: 2vw;
+.question-box img{
+  max-width:80%; margin-top:1vh; border-radius:8px;
 }
-
-.timer-label {
-  color: white;
-  font-weight: bold;
-  font-size: 1rem;
+.timer-container{display:flex;align-items:center;justify-content:center;margin:3vh 0;gap:2vw;}
+.timer-label{color:white;font-weight:bold;font-size:1rem;}
+.timer-bar{position:relative;width:70%;height:8px;background:rgba(255,255,255,0.3);
+  border-radius:10px;overflow:hidden;}
+.timer-progress{position:absolute;height:100%;width:100%;background:#fff;
+  border-radius:10px;}
+.buttons{display:flex;justify-content:space-between;align-items:center;gap:5vw;margin-bottom:12vh;}
+button{
+  flex:1;background:white;border:4px solid #004a99;outline:2px solid white;border-radius:12px;
+  font-size:1rem;font-weight:bold;padding:5vh 0;box-shadow:0 8px #004a99;
+  color:#004a99;user-select:none;transition:all .15s ease;
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
-
-.timer-bar {
-  position: relative;
-  width: 70%;
-  height: 8px;
-  background: rgba(255,255,255,0.3);
-  border-radius: 10px;
-  overflow: hidden;
+button.pressed{
+  background:#004a99;color:white;transform:translateY(6px);
+  box-shadow:0 2px #002f66;transition:all .1s ease;
 }
-
-.timer-progress {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: #fff;
-  border-radius: 10px;
-  animation: countdown 10s linear forwards;
+button img{
+  max-width:60%; margin-top:0.5vh; border-radius:6px;
 }
-
-@keyframes countdown {
-  from { width: 100%; }
-  to { width: 0%; }
+/* カットイン */
+.cutin{
+  position:fixed;
+  top:50%;left:0;
+  width:100%;
+  height:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:white;
+  font-size:2.5rem;
+  font-weight:bold;
+  text-shadow:0 0 12px rgba(255,255,255,0.8);
+  overflow:hidden;
+  transform:translateY(-50%);
+  z-index:1000;
+  animation:beamExpand 0.8s linear forwards;
 }
-
-.buttons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5vw;
-  margin-bottom: 12vh;
-}
-
-button {
-  flex: 1;
-  background: white;
-  border: 4px solid #004a99;
-  outline: 2px solid white;
-  border-radius: 12px;
-  font-size: 1.4rem;
-  font-weight: bold;
-  padding: 8vh 0;
-  box-shadow: 0 8px #004a99;
-  color: #004a99;
-  user-select: none;
-  touch-action: manipulation;
-  -webkit-tap-highlight-color: transparent;
-  transition: all 0.15s ease;
-}
-
-/* JSで pressedクラスを制御 */
-button.pressed {
-  background: #004a99;
-  color: white;
-  transform: translateY(6px);
-  box-shadow: 0 2px #002f66;
-  transition: all 0.1s ease;
+.cutin.correct{background:linear-gradient(180deg,#ff0033,#ff6666);}
+.cutin.wrong{background:linear-gradient(180deg,#0044ff,#66aaff);}
+@keyframes beamExpand{
+  0%{height:0;opacity:0;}
+  25%{height:25vh;opacity:1;}
+  75%{height:25vh;opacity:1;}
+  100%{height:0;opacity:0;}
 }
 </style>
 </head>
 <body>
-  <div class="container">
-    <div class="question-box">
-      次のうち、哺乳類はどれ？
-    </div>
-
-    <div class="timer-container">
-      <div class="timer-label">TIME</div>
-      <div class="timer-bar"><div class="timer-progress"></div></div>
-    </div>
-
-    <div class="buttons">
-      <button>ペンギン</button>
-      <button>イルカ</button>
-    </div>
+<div class="container">
+  <div class="question-box" id="question"></div>
+  <div class="timer-container">
+    <div class="timer-label">TIME</div>
+    <div class="timer-bar"><div class="timer-progress" id="timerProgress"></div></div>
   </div>
+  <div class="buttons" id="buttons"></div>
+</div>
 
 <script>
-// ボタン押下の色反転＆凹みをJSで制御
-const buttons = document.querySelectorAll('button');
-buttons.forEach(btn => {
-  btn.addEventListener('touchstart', e => { e.preventDefault(); btn.classList.add('pressed'); }, {passive: false});
-  btn.addEventListener('touchend', e => { e.preventDefault(); btn.classList.remove('pressed'); }, {passive: false});
-  btn.addEventListener('mousedown', () => btn.classList.add('pressed'));
-  btn.addEventListener('mouseup', () => btn.classList.remove('pressed'));
-  btn.addEventListener('mouseleave', () => btn.classList.remove('pressed'));
-});
+// --- 問題データ（画像も管理） ---
+const quizData=[
+  {
+    "question": "次のポケモンはどれがイルカに似てる？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png",
+    "options": [
+      {
+        "text": "ペンギン",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/17.png"
+      },
+      {
+        "text": "イルカ",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/87.png"
+      }
+    ],
+    "correct": "イルカ"
+  },
+  {
+    "question": "次のポケモンはどれが果物？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
+    "options": [
+      {
+        "text": "トマト",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
+      },
+      {
+        "text": "ニンジン",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
+      }
+    ],
+    "correct": "トマト"
+  },
+  {
+    "question": "日本の首都は？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png",
+    "options": [
+      {
+        "text": "大阪",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
+      },
+      {
+        "text": "東京",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+      }
+    ],
+    "correct": "東京"
+  },
+  {
+    "question": "次のポケモンはどれがイルカに似てる？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png",
+    "options": [
+      {
+        "text": "ペンギン",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/17.png"
+      },
+      {
+        "text": "イルカ",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/87.png"
+      }
+    ],
+    "correct": "イルカ"
+  },
+  {
+    "question": "次のポケモンはどれが果物？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
+    "options": [
+      {
+        "text": "トマト",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"
+      },
+      {
+        "text": "ニンジン",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png"
+      }
+    ],
+    "correct": "トマト"
+  },
+  {
+    "question": "日本の首都は？",
+    "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png",
+    "options": [
+      {
+        "text": "大阪",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png"
+      },
+      {
+        "text": "東京",
+        "image": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+      }
+    ],
+    "correct": "東京"
+  }
+]
+
+
+let currentIndex=0;
+let answered=false;
+let timerTimeout;
+
+// --- DOM ---
+const questionBox=document.getElementById('question');
+const buttonsDiv=document.getElementById('buttons');
+const timerProgress=document.getElementById('timerProgress');
+
+// --- タイマー ---
+function startTimer(){
+  timerProgress.style.transition="none";
+  timerProgress.style.width="100%";
+  setTimeout(()=>{
+    timerProgress.style.transition="width 10s linear";
+    timerProgress.style.width="0%";
+  },50);
+  timerTimeout=setTimeout(()=>{
+    if(!answered) handleAnswer(null); // タイムアウト
+  },10000);
+}
+
+function stopTimer(){
+  clearTimeout(timerTimeout);
+  const computedStyle=window.getComputedStyle(timerProgress);
+  const width=computedStyle.width;
+  timerProgress.style.transition="none";
+  timerProgress.style.width=width;
+}
+
+// --- 問題表示 ---
+function showQuestion(){
+  answered=false;
+  const q=quizData[currentIndex];
+  questionBox.innerHTML=q.question + (q.image?`<br><img src="${q.image}">`:"");
+  buttonsDiv.innerHTML="";
+  q.options.forEach(opt=>{
+    const btn=document.createElement('button');
+    btn.innerHTML=opt.text + (opt.image?`<img src="${opt.image}">`:"");
+    btn.onclick=()=>handleAnswer(opt.text);
+    buttonsDiv.appendChild(btn);
+  });
+  startTimer();
+}
+
+// --- 回答処理 ---
+function handleAnswer(selected){
+  if(answered) return;
+  answered=true;
+  stopTimer();
+  const q=quizData[currentIndex];
+  const isCorrect=(selected===q.correct);
+  Array.from(buttonsDiv.children).forEach(btn=>{
+    if(btn.textContent.includes(selected)) btn.classList.add('pressed');
+  });
+  showCutIn(isCorrect?"正解！":"不正解！",isCorrect);
+}
+
+// --- カットイン ---
+function showCutIn(text,isCorrect){
+  const cut=document.createElement('div');
+  cut.className='cutin '+(isCorrect?'correct':'wrong');
+  cut.textContent=text;
+  document.body.appendChild(cut);
+  cut.addEventListener('animationend',()=>{
+    cut.remove();
+    currentIndex++;
+    if(currentIndex<quizData.length) showQuestion();
+    else endQuiz();
+  });
+}
+
+// --- 終了処理 ---
+function endQuiz(){
+  questionBox.textContent="クイズ終了！お疲れさまでした。";
+  buttonsDiv.innerHTML="";
+  stopTimer();
+}
+
+// --- 初期表示 ---
+showQuestion();
 </script>
 </body>
 </html>
