--- a/sample.html
+++ b/sample.html
@@ -10,31 +10,71 @@ html,body{
   background:linear-gradient(to bottom,#aee6ff,#0056b3);
   font-family:'Helvetica Neue',sans-serif;overflow:hidden;
 }
+
 .container{
-  display:flex;flex-direction:column;justify-content:space-between;
-  height:100vh;padding:3vh 5vw;box-sizing:border-box;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  height:95vh;
+  padding:1vh 3vw;
+  box-sizing:border-box;
 }
+
 .question-box{
-  background:white;border-radius:10px;padding:1vh 2vw;text-align:center;
-  font-size:1.2rem;font-weight:bold;box-shadow:0 3px 10px rgba(0,0,0,0.1);
-  margin-top:4vh;
+  flex:2;
+  background:white;
+  border-radius:10px;
+  padding:1vh 2vw;
+  text-align:center;
+  font-size:1.1rem;
+  font-weight:bold;
+  box-shadow:0 3px 10px rgba(0,0,0,0.1);
+  margin-top:1vh;
 }
+
+.timer-container{
+  flex:0.5;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:1vh 0;
+  gap:2vw;
+}
+
+.buttons{
+  flex:2;
+  display:flex;
+  justify-content:space-between;
+  align-items:stretch;
+  gap:4vw;
+  margin-bottom:1vh;
+}
+
+button{
+  flex:1;
+  background:white;
+  border:4px solid #004a99;
+  outline:2px solid white;
+  border-radius:12px;
+  font-size:1rem;
+  font-weight:bold;
+  padding:3vh 0;
+  box-shadow:0 6px #004a99;
+  color:#004a99;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
+
 .question-box img{
   max-width:80%; margin-top:1vh; border-radius:8px;
 }
-.timer-container{display:flex;align-items:center;justify-content:center;margin:3vh 0;gap:2vw;}
 .timer-label{color:white;font-weight:bold;font-size:1rem;}
 .timer-bar{position:relative;width:70%;height:8px;background:rgba(255,255,255,0.3);
   border-radius:10px;overflow:hidden;}
 .timer-progress{position:absolute;height:100%;width:100%;background:#fff;
   border-radius:10px;}
-.buttons{display:flex;justify-content:space-between;align-items:center;gap:5vw;margin-bottom:12vh;}
-button{
-  flex:1;background:white;border:4px solid #004a99;outline:2px solid white;border-radius:12px;
-  font-size:1rem;font-weight:bold;padding:5vh 0;box-shadow:0 8px #004a99;
-  color:#004a99;user-select:none;transition:all .15s ease;
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
-}
 button.pressed{
   background:#004a99;color:white;transform:translateY(6px);
   box-shadow:0 2px #002f66;transition:all .1s ease;
