--- a/quiz.html
+++ b/quiz.html
@@ -6,11 +6,11 @@
 <title>クイズ</title>
 <style>
 :root {
-  --color-dark: #002060;     /* 濃い青 */
-  --color-light: #3399FF;    /* 明るい青 */
-  --color-bg-top: #3399FF;   /* 背景グラデ上部 */
-  --color-bg-bottom: #0056b3;/* 背景グラデ下部 */
-  --color-shadow: #555555;   /* ボタン影 */
+  --color-dark: #002060;
+  --color-light: #3399FF;
+  --color-bg-top: #3399FF;
+  --color-bg-bottom: #0056b3;
+  --color-shadow: #555555;
   --color-text: white;
 }
 
@@ -82,12 +82,7 @@ html,body{
     -2px 0   0 var(--color-dark),
      2px 0   0 var(--color-dark),
      0   -2px 0 var(--color-dark),
-     0    2px 0 var(--color-dark),
-    -2px -2px 0 var(--color-dark),
-     2px -2px 0 var(--color-dark),
-    -2px  2px 0 var(--color-dark),
-     2px  2px 0 var(--color-dark),
-     0    0   2px var(--color-dark);
+     0    2px 0 var(--color-dark);
 }
 
 .timer-bar {
@@ -183,12 +178,7 @@ button img{
     -2px 0   0 white,
      2px 0   0 white,
      0   -2px 0 white,
-     0    2px 0 white,
-    -2px -2px 0 white,
-     2px -2px 0 white,
-    -2px  2px 0 white,
-     2px  2px 0 white,
-     0    0   2px white;
+     0    2px 0 white;
 }
 
 @keyframes beamExpand{
@@ -197,10 +187,54 @@ button img{
   75%{height:13vh;opacity:1;}
   100%{height:0;opacity:0;}
 }
+
+/* === カウントダウン === */
+#countdown-overlay{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  background:#333;color:#fff;display:flex;
+  align-items:center;
+  justify-content:center;z-index:2000;
+}
+.count-number{
+  font-size:5rem;font-weight:bold;margin-bottom:10vh;
+}
+@keyframes moveUp{
+  0%{transform:translateY(100%);opacity:0}
+  30%{transform:translateY(0);opacity:1}
+  70%{transform:translateY(0);opacity:1}
+  100%{transform:translateY(-100%);opacity:0}
+}
+
+/* === ローディング画面 === */
+#loading-overlay{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  background:#333;color:white;
+  display:flex;flex-direction:column;
+  align-items:center;justify-content:center;
+  z-index:2500;
+}
+.loading-bar{
+  width:60%;height:10px;
+  background:#555;border-radius:10px;
+  overflow:hidden;margin-top:1rem;
+}
+.loading-progress{
+  width:0%;height:100%;
+  background:#00ccff;
+  border-radius:10px;
+  transition:width 3s linear;
+}
+
 </style>
 </head>
 <body>
-<div class="container">
+<div id="loading-overlay">
+  <div>リソース読み込み中...</div>
+  <div class="loading-bar"><div class="loading-progress" id="loadingProgress"></div></div>
+</div>
+<div id="countdown-overlay"><div class="count-number" id="countNum"></div></div>
+
+<div class="container" style="display:none;">
   <div class="quiz-header">
     <span id="quiz-no">Q3　ドキドキ☆2択クイズ</span>
   </div>
@@ -213,6 +247,52 @@ button img{
 </div>
 
 <script>
+const loading=document.getElementById('loading-overlay');
+const loadingProgress=document.getElementById('loadingProgress');
+
+window.addEventListener('load',()=>{
+  // 疑似的に3秒かけて進捗バーを進める
+  setTimeout(()=>{
+    loadingProgress.style.width="100%";
+    setTimeout(()=>{
+      // ローディング終了 → カウントダウン開始
+      loading.style.transition="opacity 0.5s ease";
+      loading.style.opacity="0";
+      setTimeout(()=>{
+        loading.style.display="none";
+        showCountdown();
+      },500);
+    },3000);
+  },100);
+});
+
+// --- カウントダウン処理 ---
+const overlay=document.getElementById('countdown-overlay');
+const countNum=document.getElementById('countNum');
+const container=document.querySelector('.container');
+let count=3;
+
+function showCountdown(){
+  countNum.textContent=count;
+  countNum.style.animation='moveUp 1s ease';
+  countNum.addEventListener('animationend',()=>{
+    countNum.style.animation='none';
+    countNum.style.opacity='0';
+    count--;
+    if(count>0){
+      setTimeout(showCountdown,150);
+    }else{
+      overlay.style.transition='opacity .5s';
+      overlay.style.opacity='0';
+      setTimeout(()=>{
+        overlay.style.display='none';
+        container.style.display='flex';
+        showQuestion();
+      },500);
+    }
+  },{once:true});
+}
+
 // --- 問題データ ---
 const quizData=[
   {"question":"ピクセル数が多いのは？","image":"images/slime2.png","options":[{"text":"黒"},{"text":"青"}],"correct":"青"},
@@ -304,8 +384,6 @@ function endQuiz(){
   buttonsDiv.innerHTML="";
   stopTimer();
 }
-
-showQuestion();
 </script>
 </body>
 </html>
