--- a/ainoutre.html
+++ b/ainoutre.html
@@ -38,6 +38,10 @@ html,body{
   height:40vh;
   margin-top:2vh;
   display:block;
+  -webkit-touch-callout: none; /* iOS長押しメニュー無効化 */
+  -webkit-user-drag: none;     /* 画像ドラッグ防止 */
+  user-drag: none;
+  pointer-events: auto;
 }
 .version{
   margin-top:0;
@@ -59,13 +63,13 @@ html,body{
   width:60%;
   margin-top:3vh;
   cursor:pointer;
-  transition:all .15s ease;
 }
-.start-btn:active{
+.start-btn.pressed{
   background:var(--color-dark);
   color:var(--color-text);
   transform:translateY(6px);
   box-shadow:0 2px #002f66;
+  transition:all .1s ease;
 }
 .line{
   width:80%;height:1px;
@@ -105,7 +109,7 @@ html,body{
 </head>
 <body>
 <div class="container">
-  <img src="logo.png" alt="ロゴ" class="logo">
+  <img src="logo.png" alt="ロゴ" class="logo" oncontextmenu="return false;" draggable="false">
   <div class="version">ver.1.0.0.1</div>
   <button class="start-btn" onclick="delayedStart()">START</button>
   <div class="line"></div>
@@ -118,13 +122,49 @@ html,body{
 </div>
 
 <script>
+const btn = document.querySelector('.start-btn');
+let isInside = false;
+
+btn.addEventListener('touchstart', e => {
+  isInside = true;
+  btn.classList.add('pressed');
+});
+
+btn.addEventListener('touchmove', e => {
+  const touch = e.touches[0];
+  const rect = btn.getBoundingClientRect();
+  const inside =
+    touch.clientX >= rect.left &&
+    touch.clientX <= rect.right &&
+    touch.clientY >= rect.top &&
+    touch.clientY <= rect.bottom;
+  if (inside && !isInside) {
+    btn.classList.add('pressed');
+    isInside = true;
+  } else if (!inside && isInside) {
+    btn.classList.remove('pressed');
+    isInside = false;
+  }
+});
+
+btn.addEventListener('touchend', e => {
+  if (isInside) {
+    btn.classList.remove('pressed');
+    delayedStart(); // ←内側で離した場合のみ実行
+  } else {
+    btn.classList.remove('pressed'); // 外で離したら実行しない
+  }
+  isInside = false;
+});
+
 function delayedStart() {
   const btn = document.querySelector('.start-btn');
-  btn.classList.add('active');
+  btn.classList.add('pressed');
   setTimeout(() => {
     location.href = 'quiz.html';
   }, 500);
 }
+
 </script>
 </body>
 </html>
