--- a/quiz.html
+++ b/quiz.html
@@ -35,13 +35,35 @@ img {
   pointer-events: none; /* ドラッグや右クリック防止 */
 }
 
+/* 背景パターン定義 */
+body {
+  position:fixed;
+  inset:0;
+  background-image: 
+    repeating-linear-gradient(90deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
+    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px);
+    //radial-gradient(circle at 10% 20%, rgba(255,255,255,0.1) 4px, transparent 3px),
+    //radial-gradient(circle at 60% 80%, rgba(255,255,255,0.15) 6px, transparent 4px);
+  background-size: 40px 40px, 40px 40px, 200px 200px, 300px 300px;
+  animation: movePattern 60s linear infinite;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
+}
+
+/* 背景を右下→右上へ */
+@keyframes movePattern {
+  from { background-position: 100% 100%; }
+  to   { background-position: 0 0; }
+}
+
 .container{
   display:flex;
   flex-direction:column;
   justify-content:space-between;
   height:80vh;
   max-width:60vh;
-  margin:5vh 5vw;
+  margin: 5vh 5vw;
   box-sizing:border-box;
 }
 
