--- a/quiz.html
+++ b/quiz.html
@@ -41,7 +41,9 @@ body {
   inset:0;
   background-image: 
     repeating-linear-gradient(90deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
-    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px);
+    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
+    linear-gradient(0deg, rgba(255,255,255,0.15) 0 20px, transparent 20px 40px),
+    linear-gradient(90deg, rgba(255,255,255,0.15) 0 20px, transparent 20px 40px);
     //radial-gradient(circle at 10% 20%, rgba(255,255,255,0.1) 4px, transparent 3px),
     //radial-gradient(circle at 60% 80%, rgba(255,255,255,0.15) 6px, transparent 4px);
   background-size: 40px 40px, 40px 40px, 200px 200px, 300px 300px;
