--- a/quiz.html
+++ b/quiz.html
@@ -41,18 +41,14 @@ body {
   inset:0;
   background-image: 
     repeating-linear-gradient(90deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
-    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
-      repeating-conic-gradient(
-    from 0deg,
-    rgba(255,255,255,0.1) 0deg 90deg,
-    transparent 90deg 360deg
-  );
-  //conic-gradient(from 0deg at 10% 20%, rgba(255,255,255,0.1) 0 12.5%, transparent 12.5% 100%),
-  //conic-gradient(from 0deg at 60% 80%, rgba(255,255,255,0.15) 0 12.5%, transparent 12.5% 100%);
+    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px);
+    //repeating-conic-gradient(from 0deg,rgba(255,255,255,0.1) 0deg 90deg, transparent 90deg 360deg);
+    //conic-gradient(from 0deg at 10% 20%, rgba(255,255,255,0.1) 0 12.5%, transparent 12.5% 100%),
+    //conic-gradient(from 0deg at 60% 80%, rgba(255,255,255,0.15) 0 12.5%, transparent 12.5% 100%);
     //radial-gradient(circle at 10% 20%, rgba(255,255,255,0.1) 4px, transparent 3px),
     //radial-gradient(circle at 60% 80%, rgba(255,255,255,0.15) 6px, transparent 4px);
   background-size: 40px 40px, 40px 40px, 200px 200px, 300px 300px;
-  animation: movePattern 60s linear infinite;
+  animation: movePattern 50s linear infinite;
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
@@ -68,13 +64,66 @@ body {
   display:flex;
   flex-direction:column;
   justify-content:space-between;
-  height:80vh;
+  height:85vh;
   max-width:60vh;
-  margin: 5vh 5vw;
+  margin: 2vh 5vw;
   box-sizing:border-box;
 }
 
-/* === ヘッダー === */
+/* === ステージ情報バー（ダイナミックアイランド風） === */
+.stage-info {
+  position: relative; 
+  margin: 0 auto 2vh; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 4vh);
+  max-width: 500px;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
+  border-radius: 28px;
+  padding: 0.3rem 0.8rem;
+  font-weight: bold;
+  font-size: 1rem;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  z-index: 1500;
+  backdrop-filter: blur(6px);
+}
+
+.stage-right {
+  flex: 1;
+  text-align: center;
+}
+
+.stage-left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stage-center {
+  flex: 1; display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stage-progress {
+  width: 100%;
+  height: 15px;
+  background: rgba(255,255,255,0.1);
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.stage-progress-bar {
+  height: 100%;
+  background: linear-gradient(90deg, #00ccff, #00ff99);
+  border-radius: 6px;
+  transition: width 0.5s ease;
+}
+
+/* === クイズジャンルヘッダー === */
 .quiz-header{
   margin-left:-5vw;
   background:var(--color-dark);
@@ -235,7 +284,8 @@ button img{
 /* === カウントダウン === */
 #countdown-overlay{
   position:fixed;top:0;left:0;width:100%;height:100%;
-  background:#333;color:#fff;display:flex;
+  //background:#333;
+  color:#fff;display:flex;
   align-items:center;
   justify-content:center;z-index:2000;
 }
@@ -252,7 +302,8 @@ button img{
 /* === ローディング画面 === */
 #loading-overlay{
   position:fixed;top:0;left:0;width:100%;height:100%;
-  background:#333;color:white;
+  //background:#333;
+  color:white;
   display:flex;flex-direction:column;
   align-items:center;justify-content:center;
   z-index:2500;
@@ -279,6 +330,17 @@ button img{
 <div id="countdown-overlay"><div class="count-number" id="countNum"></div></div>
 
 <div class="container" style="display:none;">
+  <!-- === ステージ情報バー === -->
+  <div class="stage-info">
+    <div class="stage-left">STAGE 1</div>
+    <div class="stage-center">
+      <div class="stage-progress">
+        <div class="stage-progress-bar" style="width:40%;">
+        </div>
+      </div>
+    </div>
+    <div class="stage-right">SCORE 999</div>
+  </div>
   <div class="quiz-header">
     <span id="quiz-no"></span>
   </div>
