--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<!-- Safariステータスバー（背景色を青に） -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <title>クイズ</title>
@@ -57,6 +56,18 @@ body {
   mask-size: contain;
   min-height: 100vh;
   padding-top: env(safe-area-inset-top);
+}
+
+
+body::before {
+  content:'';
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:env(safe-area-inset-top);
+  background:#3399FF; /* ステータスバーと同じ青 */
+  z-index:9999;
 }
 
 /* 背景を右下→右上へ */
@@ -164,13 +175,14 @@ body {
 }
 
 .score-label {
+  transform: translateY(2px);
   font-size: 0.85rem;
   letter-spacing: 0.5px;
 }
 
 .score-value {
   transform: translateY(-1px);
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   text-align: right;
   transition: transform 0.2s ease, text-shadow 0.2s ease;
 }
