--- a/quiz.html
+++ b/quiz.html
@@ -478,23 +478,29 @@ const loadingProgress=document.getElementById('loadingProgress');
 
 // --- 問題データ ---
 const quizData=[
+  {"stage":"1","quiztype":"計算力","question":"1 + 1 = ？","image":"","options":[{"text":"1"},{"text":"2"}],"correct":"2"},
   {"stage":"1","quiztype":"色彩認識力","question":"ピクセル数が多いのは？","image":"images/slime2.png","options":[{"text":"黒"},{"text":"青"}],"correct":"青"},
   {"stage":"1","quiztype":"パターン認識力","question":"？にあてはまるのは","image":"images/num1.png","options":[{"text":"2"},{"text":"3"}],"correct":"2"},
   {"stage":"1","quiztype":"注意力","question":"文字数が多いのは？","image":"images/ty.png","options":[{"text":"T"},{"text":"Y"}],"correct":"Y"},
-  {"stage":"1","quiztype":"空間認識力","question":"進行方向は？","image":"images/bus_left.png","options":[{"text":"左"},{"text":"右"}],"correct":"左"},
-  {"stage":"1","quiztype":"形状判断力","question":"若いのは？","image":"images/otama.png","options":[{"text":"A"},{"text":"B"}],"correct":"A"},
+  {"stage":"1","quiztype":"注意力","question":"じゃんけんで勝ってください<br>グー","image":"","options":[{"text":"チョキ"},{"text":"パー"}],"correct":"パー"},
+  {"stage":"2","quiztype":"計算力","question":"35 - 30 = ?","image":"","options":[{"text":"5"},{"text":"6"}],"correct":"5"},
   {"stage":"2","quiztype":"色彩認識力","question":"ピクセル数が多いのは？","image":"images/slime3.png","options":[{"text":"黒"},{"text":"青"}],"correct":"青"},
-  {"stage":"2","quiztype":"パターン認識力","question":"？にあてはまるのは","image":"images/num2.png","options":[{"text":"1"},{"text":"2"}],"correct":"1"},
+  {"stage":"2","quiztype":"空間認識力","question":"進行方向は？","image":"images/bus_left.png","options":[{"text":"左"},{"text":"右"}],"correct":"左"},
+  {"stage":"2","quiztype":"形状判断力","question":"若いのは？","image":"images/otama.png","options":[{"text":"A"},{"text":"B"}],"correct":"B"},
+  {"stage":"2","quiztype":"注意力","question":"じゃんけんで負けてください","image":"images/tyoki1.png","options":[{"text":"グー"},{"text":"パー"}],"correct":"パー"},
+  {"stage":"2","quiztype":"空間認識力","question":"進行方向は？","image":"images/bus_right.png","options":[{"text":"左"},{"text":"右"}],"correct":"右"},
   {"stage":"2","quiztype":"問題解決力","question":"片方しか助けられない。<br>どっちを助ける？","image":"","options":[{"text":"母親"},{"text":"恋人"}],"correct":null},
+  {"stage":"3","quiztype":"記憶力","question":"今何問目？","image":"","options":[{"text":"13"},{"text":"12"}],"correct":"13"},
+  {"stage":"3","quiztype":"パターン認識力","question":"？にあてはまるのは","image":"images/num2.png","options":[{"text":"1"},{"text":"2"}],"correct":"1"},
+  {"stage":"3","quiztype":"形状判断力","question":"若いのは？","image":"images/keropen.png","options":[{"text":"A"},{"text":"B"}],"correct":"A"},
   {"stage":"3","quiztype":"注意力","question":"文字数が多いのは？","image":"images/moji2.png","options":[{"text":"S"},{"text":"A"}],"correct":"S"},
-  {"stage":"3","quiztype":"空間認識力","question":"進行方向は？","image":"images/bus_right.png","options":[{"text":"左"},{"text":"右"}],"correct":"右"},
+  {"stage":"3","quiztype":"判断力","question":"長男は？","image":"images/mario.png","options":[{"text":"左"},{"text":"右"}],"correct":"左"},
   {"stage":"3","quiztype":"色彩認識力","question":"ピクセル数が多いのは？","image":"images/slime.png","options":[{"text":"黒"},{"text":"青"}],"correct":"青"},
-  {"stage":"3","quiztype":"空間認識力","question":"進行方向は？","image":"images/ookubo.png","options":[{"text":"手前"},{"text":"奥"}],"correct":"手前"},
-  {"stage":"3","quiztype":"形状判断力","question":"若いのは？","image":"images/keropen.png","options":[{"text":"A"},{"text":"B"}],"correct":"B"},
-  {"stage":"4","quiztype":"ドキドキ☆2択クイズ","question":"片方しか助けられない。<br>どっちを助ける？","image":"images/tinmoku.png","options":[{"text":"母親"},{"text":"恋人"}],"correct":null},
-  {"stage":"4","quiztype":"判断力","question":"長男は？<br>A　　　　B","image":"images/mario.png","options":[{"text":"A"},{"text":"B"}],"correct":"A"},
-  {"stage":"","quiztype":"記憶力","question":"今何問目？","image":"","options":[{"text":"15"},{"text":"16"}],"correct":"15"},
-  {"stage":"","quiztype":"最終確認","question":"あなたは吉田達彦ですね？","image":"","options":[{"text":"はい"},{"text":"はい"}],"correct":"はい"},
+  {"stage":"4","quiztype":"空間認識力","question":"進行方向は？","image":"images/ookubo.png","options":[{"text":"手前"},{"text":"奥"}],"correct":"手前"},
+  {"stage":"4","quiztype":"ドキドキ☆2択クイズ","question":"片方しか助けられない。<br>どっちを助ける？","image":"images/tinmoku.png","options":[{"text":"娘"},{"text":"息子"}],"correct":null},
+  {"stage":"4","quiztype":"注意力","question":"じゃんけんで負けてください","image":"images/tyoki2.png","options":[{"text":"グー"},{"text":"パー"}],"correct":"パー"},
+  {"stage":"4","quiztype":"確認","question":"あなたは30才以上ですか？","image":"","options":[{"text":"はい"},{"text":"いいえ"}],"correct":"はい"},
+  {"stage":"4","quiztype":"最終確認","question":"あなたは吉田達彦ですね？","image":"","options":[{"text":"はい"},{"text":"はい"}],"correct":"はい"},
 ];
 
 
@@ -680,8 +686,8 @@ function showCutIn(text, isCorrect) {
 // --- ステージ情報 ---
 const stageData=[
   {"stage":"1", "count":"5", "loadMsg":"問題を作成しています…", "startMsg":"まずは肩慣らしです。"},
-  {"stage":"2", "count":"5", "loadMsg":"あなたの回答を分析しています…", "startMsg":"少しレベルを上げますよ！"},
-  {"stage":"3", "count":"5", "loadMsg":"よりあなたにマッチさせています…", "startMsg":"やりますね！さらにレベルアップ！"},
+  {"stage":"2", "count":"7", "loadMsg":"あなたの回答を分析しています…", "startMsg":"少しレベルを上げます！"},
+  {"stage":"3", "count":"6", "loadMsg":"あなたにあわせて調整しています…", "startMsg":"やりますね！さらにレベルアップ！"},
   {"stage":"4", "count":"5", "loadMsg":"完全にあなたを理解しました…", "startMsg":"レベルMAX！最終ステージです！"},
 ]
 
