--- a/result.html
+++ b/result.html
@@ -114,6 +114,17 @@ body::before {
 </div>
 
 <script>
+
+// 画像プリロード
+window.addEventListener("load", () => {
+  const imageUrls = ["kawashima2.png", "pico.png"]
+
+  imageUrls.forEach(src => {
+    const img = new Image();
+    img.src = src;
+  });
+});
+
 const face = document.getElementById('face');
 const line2 = document.querySelector('.line2');
 const line3 = document.querySelector('.line3');
@@ -145,14 +156,14 @@ setTimeout(() => {
 // ② 画像差し替え → 下に落ちる
 setTimeout(() => {
   face.src = "pico.png"; // 2枚目
-  face.style.transition = "transform 0.5s ease-out";
+  face.style.transition = "transform 0.3s ease-out";
   face.style.transform = "translateY(0)";
 }, 5000);
 
-// ③ 2秒ふわふわ後、60才を表示
+// ③ 落下直後、60才を表示
 setTimeout(() => {
   line2.style.animation = "showLine 0.01s forwards";
-}, 5500);
+}, 5300);
 
 // ④ 1秒後「還暦おめでとう！」表示
 setTimeout(() => {
